--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WADM - Animated Progress Bar w/ Lenis</title>
+
+    <!-- CSS stylesheet folder path -->
     <link rel="stylesheet" href="settings.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -18,7 +21,7 @@
                 ather the team for a dynamic brainstorming session to generate
                 innovative ideas and concepts. Focus on identifying user needs,
                 potential features, and unique selling points to shape the
-                foundation of the projects.
+                foundation of the project.
               </p>
             </div>
             <div class="section_content_item">
@@ -32,7 +35,7 @@
             </div>
             <div class="section_content_item">
               <h1 class="section_content_item_title">Q3 - Code Crusade</h1>
-              <p class="section_content_item_description">
+              <p class="section_content_item_descriptiomn">
                 Begin the coding phase, turning your prototypes into a
                 functional product. Leverage modern technologies like React,
                 Next.js, and Tailwind CSS to build a robust and efficient web
@@ -41,12 +44,11 @@
             </div>
             <div class="section_content_item">
               <h1 class="section_content_item_title">Q4 - Bug Hunt</h1>
-              <p class="section_content_item_description">
-                Enter the debugging phase of your project. Conduct thorough
-                testing and code reviews to identify and fix bugs. Check various
-                scenarios to ensure all features work as intended, and perform
-                optimization tasks to deliver a seamless experience for the end
-                users.
+              <p class="section_content_item_descriptiomn">
+                Conduct thorough testing to identify and fix bugs, optimize
+                performance, and enhance user experience. Gather feedback from
+                beta testers and iterate on the design and functionality to
+                ensure the final product is polished and user-friendly.
               </p>
             </div>
           </div>
@@ -87,13 +89,13 @@
             class="section_bg_video"
             loop
             muted
-            autoplay
           ></video>
         </div>
       </div>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/+esm"></script>
-    <script src="index.js"></script>
+    <!-- Javascript Script folder path -->
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.29/bundled/lenis.min.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
